# Sunny

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  ambient_classifier.rs  app_state.rs  applescript.rs  attributed_body.rs  audio.rs  audio_capture.rs  automation.rs  ax.rs  boot_guard.rs  calendar.rs  capability.rs  clipboard.rs  constitution.rs  contacts_book.rs  control.rs  daemons.rs  diagnostics.rs  event_bus.rs  filesys.rs  http.rs  icons.rs  identity.rs  latency_harness.rs  lib.rs  mail.rs  main.rs  media.rs  menu.rs  messages.rs  messages_watcher.rs  messaging.rs  metrics.rs  nav.rs  notes_app.rs  notify.rs  ocr.rs  openclaw_bridge.rs  page_state.rs  paths.rs  (+28 more)
src-tauri/src/agent_loop/: analyze_messages.rs  catalog.rs  claude_code.rs  code_edit.rs  confirm.rs  core.rs  core_helpers.rs  cost_guard.rs  council.rs  deep_research.rs  helpers.rs  memory_integration.rs  mod.rs  persona.rs  plan_execute.rs  plugins.rs  privacy_detect.rs  reflect.rs  remember_screen.rs  scope.rs  session_cache.rs  session_lock.rs  subagents.rs  summarize_pdf.rs  task_classifier.rs  telemetry_cost.rs  tool_output_wrap.rs  tool_trait.rs  tools_vision.rs  types.rs  web_browse.rs
src-tauri/src/agent_loop/context_window/: mod.rs  score.rs  truncate.rs
src-tauri/src/agent_loop/critic/: mod.rs  score.rs  trigger.rs
src-tauri/src/agent_loop/dialogue/: mod.rs  stream.rs
src-tauri/src/agent_loop/dispatch/: classify.rs  execute.rs  mod.rs  wrap.rs
src-tauri/src/agent_loop/model_router/: fallback.rs  mod.rs  route.rs  tier.rs
src-tauri/src/agent_loop/plugins/: executor.rs
src-tauri/src/agent_loop/prompts/: capabilities_block.rs  mod.rs  persona_block.rs  safety_block.rs  tool_use_block.rs
src-tauri/src/agent_loop/providers/: anthropic.rs  auth.rs  claude_code.rs  glm.rs  kimi.rs  mod.rs  ollama.rs  openclaw.rs
src-tauri/src/agent_loop/reflexion/: mod.rs  prompts.rs
src-tauri/src/agent_loop/tools/: mod.rs
src-tauri/src/agent_loop/tools/agents/: agent_broadcast.rs  agent_list_siblings.rs  agent_message.rs  agent_wait.rs  mod.rs
src-tauri/src/agent_loop/tools/apple/: core.rs  focus_mode_set.rs  homekit_scene_run.rs  mod.rs  music_now_playing.rs  music_pause.rs  music_play.rs  music_skip.rs  music_volume.rs  photos_recent.rs  photos_search.rs  shortcut_list.rs  shortcut_run.rs  system_notification.rs
src-tauri/src/agent_loop/tools/browser/: browser_cdp_click.rs  browser_cdp_close_tab.rs  browser_cdp_eval.rs  browser_cdp_list_tabs.rs  browser_cdp_open.rs  browser_cdp_read.rs  browser_cdp_screenshot.rs  browser_cdp_type.rs  browser_cdp_wait.rs  browser_open.rs  browser_read_page_text.rs  mod.rs
src-tauri/src/agent_loop/tools/composite/: agent_reflect.rs  analyze_messages.rs  claude_code_supervise.rs  code_edit.rs  council_decide.rs  deep_research.rs  mod.rs  (+6 more)
src-tauri/src/ambient/: mod.rs  rules.rs  settings.rs  store.rs
src-tauri/src/autopilot/: deliberator.rs  governor.rs  mod.rs  scoring.rs
src-tauri/src/autopilot/sensors/: build.rs  clipboard_change.rs  fs_burst.rs  idle.rs  mod.rs
src-tauri/src/browser/: audit.rs  bridge.rs  commands.rs  dispatcher.rs  doh.rs  downloads.rs  media.rs  mod.rs  profile.rs  reader.rs  research.rs  sandbox.rs  storage.rs  tor.rs  transport.rs
src-tauri/src/browser/cdp/: error.rs  handle.rs  mod.rs  security.rs  session.rs  types.rs
src-tauri/src/channels/: mod.rs  telegram.rs
src-tauri/src/commands/: agent.rs  audio.rs  capability.rs  cost.rs  fs.rs  identity.rs  messaging.rs  metrics.rs  misc.rs  mod.rs  platform.rs  plugins.rs  pty.rs  scheduler.rs  secrets.rs  ui.rs  vision_ocr.rs  voice.rs
src-tauri/src/commands/memory/: compact.rs  conversation.rs  episodic.rs  mod.rs  procedural.rs  retention.rs  semantic.rs  tool_usage.rs
src-tauri/src/memory/: compact.rs  consolidator.rs  conversation.rs  db.rs  embed.rs  episodic.rs  expand.rs  hybrid.rs  mod.rs  pack.rs  procedural.rs  retention.rs  semantic.rs  tool_usage.rs
src-tauri/src/memory/continuity_store/: moc.rs  mod.rs  schema.rs  wikilinks.rs
src-tauri/src/scan/: bazaar.rs  commands.rs  hash.rs  heuristic.rs  mod.rs  scanner.rs  types.rs  vault.rs
src-tauri/src/scan/signatures/: catalog.rs  entries.rs  matcher.rs  mod.rs  patterns.rs  tests.rs  types.rs
src-tauri/src/security/: audit_log.rs  behavior.rs  canary.rs  commands.rs  connections.rs  egress_monitor.rs  enforcement.rs  fim.rs  incident.rs  ingress.rs  injection_patterns.rs  integrity.rs  mod.rs  outbound.rs  panic.rs  policy.rs  redact.rs  shell_safety.rs  store.rs  xprotect.rs
src-tauri/src/security/watchers/: codesign.rs  launch_agents.rs  login_items.rs  mod.rs  perm_poll.rs  process_tree.rs
src-tauri/src/tools_compute/: calc.rs  data.rs  time.rs  units.rs
src-tauri/src/voice/: always_on_buffer.rs  config.rs  mod.rs  normalize.rs  wake_word.rs
src-tauri/src/world/: classifier.rs  helpers.rs  mod.rs  model.rs  persist.rs  side_effects.rs  state.rs  updater.rs
src-tauri/tests/: eval_harness.rs  live.rs  longevity_eval.rs  scenarios.rs
src-tauri/tests/fixtures/: tiny.csv  tiny.docx  tiny.xlsx
src-tauri/tests/live/: live_eval_scenarios.rs  live_glm_turn.rs  live_ollama_turn.rs  live_routing.rs  live_smoke.rs  live_tool_wrap.rs  mod.rs
src-tauri/tests/scenarios/: autopilot_signal.rs  brainstorm_mode.rs  build_utility.rs  calendar_prep.rs  claude_code_live.rs  continuity_recall.rs  continuity_warm_context.rs  council_live.rs  debug_failing_test.rs  dev_tool_launch.rs  email_triage.rs  grand_integration.rs  longevity_24h_synthetic.rs  mod.rs  openclaw_bridge_live.rs  perf_profile_live.rs  prompt_injection_redteam.rs  prompt_injection_redteam_2.rs  routing_and_cost.rs  tier_routing_live.rs  unattended_consent_live.rs  user_brainstorm_naming.rs  user_calendar_prep.rs  user_pdf_summarize.rs  user_reminder_30min.rs  voice_wake_word.rs
src-tauri/tests/support/: fake_provider.rs
(+998 files in other folders)
